# ChainAPi

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  SECURITY.md  appveyor.yml  azure-pipelines.yml  vcpkg.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: boundary-check.yml  build-dev.yml  build-main.yml  build.yml  deploy-docs.yml
cli/: CMakeLists.txt
cli/src/: main.cpp
cli/src/commands/: ImportCommand.cpp  ImportCommand.h  LintCommand.cpp  LintCommand.h  RunCommand.cpp  RunCommand.h
cli/src/output/: JUnitRenderer.cpp  JUnitRenderer.h  JsonRenderer.cpp  JsonRenderer.h  StepFormatting.h  TextRenderer.cpp  TextRenderer.h
cli/tests/: CMakeLists.txt
cli/tests/unit/: RendererTest.cpp
cmake/: ChainApiBoundaryGuards.cmake  ChainApiCompilerWarnings.cmake  ChainApiSanitizers.cmake
desktop/: CMakeLists.txt  DESIGN.md
desktop/src/: main.cpp
desktop/src/application/: App.cpp  App.h  Bootstrapper.cpp  Bootstrapper.h  EnvironmentSettings.cpp  EnvironmentSettings.h  LayoutSettings.cpp  LayoutSettings.h  ProjectModel.cpp  ProjectModel.h  RunController.cpp  RunController.h  SecretManager.cpp  SecretManager.h
desktop/src/theming/: Color.cpp  Color.h  Theme.cpp  Theme.h  ThemeManager.cpp  ThemeManager.h
desktop/src/views/: Formatting.cpp  Formatting.h  MainWindow.cpp  MainWindow.h  ProjectExplorerWidget.cpp  ProjectExplorerWidget.h  RequestEditorPanel.cpp  RequestEditorPanel.h  ResponseViewerPanel.cpp  ResponseViewerPanel.h  SecretsDialog.cpp  SecretsDialog.h  TimelinePanel.cpp  TimelinePanel.h
desktop/src/widgets/: CommandPalette.cpp  CommandPalette.h  EmptyState.cpp  EmptyState.h  FuzzyMatch.cpp  FuzzyMatch.h  KeyValueEditor.cpp  KeyValueEditor.h  LineDiff.cpp  LineDiff.h  PanelHeader.cpp  PanelHeader.h  StatusBadge.cpp  StatusBadge.h  Toast.cpp  Toast.h
desktop/tests/: CMakeLists.txt
desktop/tests/ui/: EnvironmentSettingsTest.cpp  ResponseViewerPanelTest.cpp
desktop/tests/unit/: ColorTest.cpp  FuzzyMatchTest.cpp  KeyValueEditorTest.cpp  LayoutSettingsTest.cpp  LineDiffTest.cpp  SecretManagerTest.cpp  StatusBadgeTest.cpp
doc/: ChainAPI - Engine Requirement.md  ChainAPI - PRD.md  ChainAPI - Project Layout.md  Cpp-Failure-Modes.md
docs-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json
docs-site/scripts/: quote-descriptions.sh  scaffold-stubs.sh
docs/adr/: README.md
engine/: CMakeLists.txt
engine/include/chainapi/engine/: Actor.h  ErrorCodes.h  Events.h  ExecutionEngine.h  Factories.h  Operation.h  PublicApi.h  Resource.h  RunContext.h  SecretStore.h  Transport.h
engine/src/application/: AuthStrategy.cpp  AuthStrategy.h  Cookies.cpp  Cookies.h  ExecutionEngine.cpp  Factories.cpp  HeaderMasking.cpp  HeaderMasking.h  ImportFromOpenApi.cpp  ImportFromOpenApi.h  JsonExtraction.cpp  JsonExtraction.h  MultipartBuilder.cpp  MultipartBuilder.h  PredicateEvaluator.cpp  PredicateEvaluator.h  RequestSigners.cpp  RequestSigners.h  RunOperationUseCase.cpp  RunOperationUseCase.h  Verifier.cpp  Verifier.h
engine/src/domain/: Actor.cpp  Codecs.cpp  Codecs.h  DependencyResolver.cpp  DependencyResolver.h  ErrorCodes.cpp  Operation.cpp  Resource.cpp  RunContext.cpp  Topology.cpp  Topology.h  VariableResolver.cpp  VariableResolver.h
engine/src/infrastructure/extraction/: JsonPathEvaluator.cpp  JsonPathEvaluator.h
engine/src/infrastructure/hooks/: HookRunner.h  QuickJsHookRunner.cpp  QuickJsHookRunner.h
engine/src/infrastructure/http/: CurlHttpClient.cpp  CurlHttpClient.h  HttpClient.h
engine/src/infrastructure/llm/: HttpLlmClient.cpp  HttpLlmClient.h  LlmClient.h
engine/src/infrastructure/schema/: SchemaParser.h  SchemaWriter.h  YamlSchemaParser.cpp  YamlSchemaParser.h  YamlSchemaWriter.cpp  YamlSchemaWriter.h
engine/src/infrastructure/secrets/: KeychainSecretStore.cpp  KeychainSecretStore.h  SecretStore.h
engine/src/infrastructure/storage/: HistoryStore.h  SqliteHistoryStore.cpp  SqliteHistoryStore.h
engine/src/infrastructure/typings/: HookTypingsEmitter.h  StaticHookTypingsEmitter.cpp  StaticHookTypingsEmitter.h
engine/src/infrastructure/util/: Crypto.cpp  Crypto.h
engine/tests/: CMakeLists.txt
engine/tests/fixtures/: cookie-jar-routes.json  extraction-routes.json  hooks-routes.json  marketplace-routes.json  multipart-routes.json  polling-routes.json  refresh-routes.json
engine/tests/fixtures/cookie-jar-project/: chainapi.yaml
engine/tests/fixtures/extraction-project/: chainapi.yaml
engine/tests/fixtures/hooks-project/: chainapi.yaml
engine/tests/fixtures/mock-sut/: CMakeLists.txt  main.cpp
engine/tests/fixtures/multipart-project/: chainapi.yaml
engine/tests/fixtures/refresh-project/: chainapi.yaml
engine/tests/integration/: CookieJarTest.cpp  ExtractionSourcesTest.cpp  HappyPathTest.cpp  HooksTest.cpp  MockSutHarness.cpp  MockSutHarness.h  MultipartTest.cpp  PollingTest.cpp  RunOptionsTest.cpp  SecretLoadingTest.cpp  SessionRefreshTest.cpp  TransportConfigTest.cpp
engine/tests/support/: TempPath.h  TimeUtil.h
engine/tests/unit/: AuthStrategyTest.cpp  CodecsTest.cpp  CookiesTest.cpp  CryptoTest.cpp  DependencyResolverTest.cpp  HeaderMaskingTest.cpp  HookTypingsEmitterTest.cpp  HttpLlmClientTest.cpp  ImportFromOpenApiTest.cpp  JsonExtractionTest.cpp  MultipartBuilderTest.cpp  PredicateEvaluatorTest.cpp  QuickJsHookRunnerTest.cpp  SchemaParserMultiFileTest.cpp  SchemaParserPollUntilTest.cpp  SchemaValidationTest.cpp  SchemaWriterTest.cpp  SecretEnvTagTest.cpp  SmokeTest.cpp  SqliteHistoryStoreTest.cpp  TopologyTest.cpp  VariableResolverTest.cpp  VerifierTest.cpp
ipc/: CMakeLists.txt  README.md
prompts/import/: 01-discover.md  02-plan-schema.md  03-generate-actors.md  04-generate-resources.md  05-generate-environment.md  06-fix-lint-errors.md  README.md  system.md
samples/: README.md
samples/marketplace/: chainapi.yaml
tools/: build-incremental.sh  format.sh  lint.sh  pre-push-check.sh  setup-qt.cmd  setup-qt.sh
tools/ci/: appveyor-bootstrap-vcpkg-windows.cmd  boundary-check.sh  (+2 more)
validation/: README.md
(+85 files in other folders)
